@@ -1,3 +1,7 @@
+2012-01-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Implemented partial refactoring of tx_displaycontroller::main(), resolves #33527
+
 2012-01-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Moved debug output to a separate class, made it configurable, resolves #33360
